<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.hoxy.hlivv.ui.SplashFragment"
        android:label="splash_fragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_onBoardingFragment"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.hoxy.hlivv.ui.onboarding.OnboardingFragment"
        android:label="OnBoardingFragment">
        <action
            android:id="@+id/action_onBoardingFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.hoxy.hlivv.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.hoxy.hlivv.ui.search.SearchFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hoxy.hlivv.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"></fragment>

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.hoxy.hlivv.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />


    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.hoxy.hlivv.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>