<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_payment_background"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/button_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_up" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/final_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_up">

        <TextView
            android:id="@+id/title_final_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_aceb"
            android:maxLines="1"
            android:text="@string/final_payment"
            android:textColor="@color/title_color"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/final_payment_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/nanumsquare_aceb"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:text="@string/zero"
            android:textColor="@color/final_payment"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/title_final_payment"
            app:layout_constraintEnd_toStartOf="@id/final_payment_ko_kr"
            app:layout_constraintStart_toEndOf="@id/title_final_payment" />

        <TextView
            android:id="@+id/final_payment_ko_kr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_aceb"
            android:maxLines="1"
            android:paddingStart="4dp"
            android:paddingEnd="1dp"
            android:text="@string/ko_kr"
            android:textColor="@color/final_payment"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_final_payment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/final_payment_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/goto_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/number_of_order_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_aceb"
            android:text="@string/zero"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/goto_order_kr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_aceb"
            android:text="@string/product_count_to_payment"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>